--- a/ElfTraining/test-output/old/Default suite/methods-alphabetical.html
+++ b/ElfTraining/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1b49b">  <td>22/12/12 14:22:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Hyundai_Test.Hyundai_Test()[pri:0, instance:Cars_Test.Hyundai_Test@2e3967ea]">Hyundai_Test</td> 
-  <td>main@1579957528</td>   <td></td> </tr>
+<tr bgcolor="cf94f8">  <td>22/12/13 16:02:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_Search.search()[pri:0, instance:dws_testcases.TC_003_Search@4470f8a6]">search</td> 
+  <td>main@718068661</td>   <td></td> </tr>
 </table>
